[tool.poetry]
name = "repl_python3_PaleGreedyEmacs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opentracing = "^2.3.0"
lib = "^3.0.0"
jaeger-client = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
